--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="intro">
             <div class="container intro__content">
-                <h1 class="intro__title">Tanishlar hech qachon ko'p bo'lmaydi!</h1>
+                <h1 class="intro__title">Pul hech qachon ko'p bo'lmaydi!</h1>
                 <img src="image/header-content.png" alt="">
             </div>
             <ul class="intro__app">
